--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
             <input class="input" type="text" placeholder="Введите название города">
             <button class="btn">Показать</button>
         </form>
-
-
-
-
     </header>
 
-
-
-
+    <div class="card">
+        <div class="card-city">London <span>GB</span></div>
+        <div class="card-weather">
+            <div class="card-value">11<sup>°c</sup></div>
+            <img class="card-img" src="./img/example.png" alt="Weather">
+        </div>
+        <div class="card-description">Cloud</div>
+    </div>
     <script src="./main.js"></script>
 </body>
 
