--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         </div>
         <div class="card-description">Cloud</div>
     </div>
+
+    <footer class="footer">
+        <a href="https://github.com/SweetP35/weather-widget" target="_blank">Ссылка на проект</a>
+    </footer>
     <script src="./main.js"></script>
 </body>
 
