--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         </form>
     </header>
 
-    <div class="card">
+    <!-- <div class="card">
         <div class="card-city">London <span>GB</span></div>
         <div class="card-weather">
             <div class="card-value">11<sup>°c</sup></div>
             <img class="card-img" src="./img/example.png" alt="Weather">
         </div>
         <div class="card-description">Cloud</div>
-    </div>
+    </div> -->
 
     <footer class="footer">
         <a href="https://github.com/SweetP35/weather-widget" target="_blank">Ссылка на проект</a>
