Work this languages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <footer class="footer">
         <a href="https://github.com/SweetP35/weather-widget" target="_blank">Ссылка на проект</a>
     </footer>
-    <script src="./main.js"></script>
+    <script src="./conditions.js" type="module"></script>
+    <script src="./main.js" type="module"></script>
 </body>
 
 </html>
