--- a/index.html
+++ b/index.html
@@ -12,23 +12,20 @@
     <header class="header">
         <h1 class="title">Прогноз погоды</h1>
         <form class="form">
-            <input class="input" type="text" placeholder="Введите название города">
-            <button class="btn">Показать</button>
+            <div class="select-header">
+                <input class="input" type="text" placeholder="Введите название города">
+                <button class="btn">Показать</button>
+            </div>
+            <div class="select-body">
+            </div>
         </form>
     </header>
 
-    <!-- <div class="card">
-        <div class="card-city">London <span>GB</span></div>
-        <div class="card-weather">
-            <div class="card-value">11<sup>°c</sup></div>
-            <img class="card-img" src="./img/example.png" alt="Weather">
-        </div>
-        <div class="card-description">Cloud</div>
-    </div> -->
 
     <footer class="footer">
         <a href="https://github.com/SweetP35/weather-widget" target="_blank">Ссылка на проект</a>
     </footer>
+    <script src="./cities.js" type="module"></script>
     <script src="./conditions.js" type="module"></script>
     <script src="./main.js" type="module"></script>
 </body>
